# Study

./: .gitignore  README.md  gitignore
CUDA/1D_Convolution/: kernel.cu
CUDA/2D_Convolusion/: kernel.cu
CUDA/Atomic/: kernel.cu
CUDA/Scan/: kernel.cu
CUDA/Sobel_cuda/: kernel.cu
CUDA/Synchronization/: kernel.cu
CUDA/matrix_mul/: kernel.cu
CUDA/matrix_multiply/: kernel.cu
CUDA/tiled_matrix_mul/: kernel.cu
CUDA/vector_sum_1/: kernel.cu
CUDA/vector_sum_2/: kernel.cu
DataStructure/BST/: BST.cpp  BinarySearchTree.h
DataStructure/DLinkedList/: DLinkedList.h  main.cpp
DataStructure/HANOI/: HANOI.cpp
DataStructure/Heap/: Heap.cpp
DataStructure/LinkedList/: LinkedList.cpp  main.cpp
DataStructure/PARENTHESIS MATCHING/: PARENTHESIS MATCHING.cpp
DataStructure/Queue/: Queue.cpp
Docker/ros/: Dockerfile  client.ovpn  run.sh
ETC/Algorithm/MergeSort/: main.cpp
ETC/DataStructure/DLinkedList/: DLinkedList.cpp
ETC/DataStructure/HANOI/: Stack.h
ETC/DataStructure/LinkedList/: LinkedList.h
ETC/DataStructure/PARENTHESIS MATCHING/: stack.h
ETC/DataStructure/PeriorityQueue/: nHeap.cpp
ETC/DataStructure/stack/: stack.cpp
ETC/FFT/: fft.cpp
ETC/MQTT/: CMakeLists.txt
ETC/MQTT/src/: main.cpp  mqtt.cpp  mqtt.h  mqtt.hpp
ETC/OpenMP_Conv/: OpenMP_Conv.cpp
ETC/RTSP_test/: .cproject  .project  CMakeLists.txt  README.md  RTSP.cpp  main.cpp  v4l2Device_custom.cpp  v4l2Device_custom.h
HackerRank/Greedy_Alorithms/Luck_Balance/: main.cpp
HackerRank/Greedy_Alorithms/Minimum_Absolute_Difference_in_an_Array/: main.cpp
HackerRank/Python/Capitalize/: main.py
LinuxSystemSW/Ch01.static.library.1.0/: Makefile  include.h
LinuxSystemSW/Ch01.static.library.1.2/: m
LinuxSystemSW/Ch03.file.1.0/: Makefile
LinuxSystemSW/Ch03.file.2.0/: ret.c
LinuxSystemSW/Ch03.file.3.0/: infile  ret
LinuxSystemSW/Ch03.file.5.0/: Makefile  r  ret  ret.c
LinuxSystemSW/Ch04.time.1.0/: ret.c
LinuxSystemSW/Ch04.time.2.0/: ret.c
LinuxSystemSW/Ch05.terminal.1.0/: Makefile  ret.c
LinuxSystemSW/Ch11.process.2.1-fork.1/: Makefile
LinuxSystemSW/Ch11.process.3.1-signal/: Makefile  ret.c
LinuxSystemSW/Ch12.thread.1.1-5threads/: Makefile  r
LinuxSystemSW/Ch12.thread.2.2-matrix/: Makefile
LinuxSystemSW/Ch12.thread.3.0-semaphore/: ret  ret.c
LinuxSystemSW/Ch12.thread.4.0-semaphore/: r  ret.c
LinuxSystemSW/Ch13.pipe.1.1-popen/: Makefile  ret  ret.c
LinuxSystemSW/Ch13.pipe.2.0-pipe/: ret
LinuxSystemSW/Ch13.pipe.3.0-fifo/: Makefile  client.c  ret.c  server.c
LinuxSystemSW/Ch14.IPC.3.0-messageQ/: client  server.c
LinuxSystemSW/file_size_with_low_IO/: ret.c
LinuxSystemSW/find_smallest_file/: Makefile  ret  ret.c
LinuxSystemSW/output_file/: Makefile  outfile  ret.c
LinuxSystemSW/print_calendar_monday/: ret  ret.c
Linux_System_SW/Ch01.static.library.1.0/: main.c  mylib.c  mylib.h  ret
Linux_System_SW/Ch01.static.library.1.1/: m  main.c  mk.sh  mylib.c  mylib.h
Linux_System_SW/Ch01.static.library.1.2/: main.c  mylib.c  mylib.h  rm.sh
Linux_System_SW/Ch03.file.1.0/: infile  ret.c
Linux_System_SW/Ch03.file.2.0/: Makefile  infile  infile.org  ret
Linux_System_SW/Ch03.file.3.0/: Makefile  ret.c
Linux_System_SW/Ch03.file.4.0/: r  ret  ret.c
Linux_System_SW/Ch04.print_calendar.1.0/: ret  ret.c
Linux_System_SW/Ch04.time.1.0/: ret
Linux_System_SW/Ch04.time.2.0/: ret
Linux_System_SW/Ch05.terminal.1.0/: ret
Linux_System_SW/Ch11.process.1.1-ps.count/: ret  ret.c
Linux_System_SW/Ch11.process.2.0-fork/: ret  ret.c
Linux_System_SW/Ch11.process.2.1-fork.1/: mysleep  mysleep.c  ret  ret.c
Linux_System_SW/Ch11.process.3.1-signal/: r  ret
Linux_System_SW/Ch12.thread.1.1-5threads/: ret  ret.c
Linux_System_SW/Ch12.thread.2.2-matrix/: ret  ret.c
Linux_System_SW/Ch12.thread.3.0-semaphore/: r
Linux_System_SW/Ch12.thread.4.0-semaphore/: ret
Linux_System_SW/Ch13.pipe.2.0-pipe/: ret.c
Linux_System_SW/Ch13.pipe.3.0-fifo/: client  ret  server
Linux_System_SW/Ch14.IPC.3.0-messageQ/: Makefile  client.c  ret.c  server
Linux_System_SW/file_descriptor/: ret.c
Linux_System_SW/file_size_with_low_IO/: ret
Linux_System_SW/last_sunday_of_the_month/: ret  ret.c
Linux_System_SW/output_file/: ret
Network/ARP/: ARP.cpp
Network/MQTT/: client.py
Network/STW_Simulate/: Stop_and_Wait.c
Network/STW_Simulate(socket)/socket_SnW_Client/: socket_SnW_Client.cpp
Network/STW_Simulate(socket)/socket_SnW_Server/: socket_SnW_Server.cpp
Network/TCP_Client/: Client.cpp  TCP_Client
OS/Cpu_Load/: Cpu_Load.cpp
OS/Matrix_Multiplication/: Matrix_Multiplication.cpp
OS/Matrix_Multiplication/matrix_1/: 100x100  20x40  40x60  60x80  80x100  result.txt
OS/Matrix_Multiplication/matrix_2/: 10x50  4x10  50x6  result.txt
OS/Matrix_Multiplication/matrix_3/: 100x100  100x90  80x100  90x80  result.txt
OS/Multiplication_Table/: Multiplication_Table.cpp
OS/Process_Counter/: Process_Counter.cpp
OS/Process_Scheduling/: Process_Scheduling.cpp
OS/Process_Tree/: Process_Tree.cpp
OS/Safety_Algorithm/: Safety_Algorithm.cpp
ProblemSolving/Algospot/: README.md
ProblemSolving/Backjoon/DynamicProgramming/: main.cpp
ProblemSolving/HackerRank/: README.md
ProblemSolving/Leetcode/: README.md
ProblemSolving/Programmers/: README.md
Python/HackerRank/Finding the percentage/: finding_the_percentage.py
Python/HackerRank/Nested_Lists/: nested_lists.py
ROS/RTP/: h264.sdp  test.h264
ROS/RTP/devel/: .catkin  .rosinstall  setup.sh  (+1 more)
STL_study/: CMakeLists.txt
STL_study/src/2-1/: CMakeLists.txt  main.cpp
STL_study/src/2-3/: CMakeLists.txt  main.cpp
STL_study/src/2-4/: CMakeLists.txt  main.cpp
STL_study/src/2-7/: CMakeLists.txt  main.cpp
STL_study/src/2-8/: CMakeLists.txt  main.cpp
STL_study/src/2-9/: CMakeLists.txt  main.cpp
STL_study/src/3-1/: CMakeLists.txt  main.cpp
STL_study/src/3-10/: main.cpp
STL_study/src/3-3/: main.cpp
STL_study/src/3-4/: CMakeLists.txt  main.cpp
STL_study/src/3-5/: main.cpp
STL_study/src/3-6/: main.cpp
STL_study/src/3-7/: main.cpp
STL_study/src/3-8/: main.cpp
STL_study/src/3-9/: main.cpp
STL_study/src/4-1/: main.cpp
(+166 files in other folders)
